--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -97,10 +97,11 @@
 
 .dropdown-profile-icon{
   cursor: pointer;
-  background-image: linear-gradient(to bottom, rgba(255,255,0,0.5), rgba(0,0,255,0.5));
+  /* background-image: linear-gradient(to bottom, rgba(255,255,0,0.5), rgba(0,0,255,0.5)); */
   width: 40px;
   height: 40px;
   border-radius: 2px;
+  border: 1px solid #ffffff00;
 }
 
 .dropdown-profile-icon:hover{
